force-app/main/default/objects/Consumer_Help_and_Support__c/Consumer_Help_and_Support__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Consumer Help and Support</label>
</CustomObject>