force-app/main/default/objects/Consumer_Help_and_Support__c/fields/AP_Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>AP_Channel_Name__c</fullName>
    <label>AP Channel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>