force-app/main/default/objects/Consumer_Help_and_Support__c/fields/API_Key_v2__c.field-meta.xml
<CustomField>
    <fullName>API_Key_v2__c</fullName>
    <description>New API key</description>
    <label>API Key v2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>