force-app/main/default/objects/Consumer_Help_and_Support__c/fields/Compensation_Max_Attemps__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Max_Attemps__c</fullName>
    <label>Compensation Max Attemps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>