force-app/main/default/objects/Consumer_Help_and_Support__c/fields/Connection_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Connection_Time_Out__c</fullName>
    <description>In Milliseconds</description>
    <label>Connection Time Out</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>