force-app/main/default/objects/Consumer_Help_and_Support__c/fields/EDD_Service_API_Key__c.field-meta.xml
<CustomField>
    <fullName>EDD_Service_API_Key__c</fullName>
    <description>Holds the API key for EDD estimation service</description>
    <label>EDD Service API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>