force-app/main/default/objects/Consumer_Help_and_Support__c/fields/EDD_Service_Connection_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>EDD_Service_Connection_Time_Out__c</fullName>
    <description>Connection time out for EDD estimation service</description>
    <label>EDD Service Connection Time Out</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>