force-app/main/default/objects/Consumer_Help_and_Support__c/fields/EDDQueryParams__c.field-meta.xml
<CustomField>
    <fullName>EDDQueryParams__c</fullName>
    <description>Query parameters passed to the EDD service upon invocation</description>
    <label>EDDQueryParams</label>
    <length>255</length>
    <type>Text</type>
</CustomField>