force-app/main/default/objects/Consumer_Help_and_Support__c/fields/EnableExceptionChecker__c.field-meta.xml
<CustomField>
    <fullName>EnableExceptionChecker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Exception Checker</label>
    <type>Checkbox</type>
</CustomField>