force-app/main/default/objects/Consumer_Help_and_Support__c/fields/Encoded_Crypto_Key__c.field-meta.xml
<CustomField>
    <fullName>Encoded_Crypto_Key__c</fullName>
    <description>Using to encrypt and decrypt the &apos;wizarData&apos; and &apos;Authenticated UserInfo&apos; to store in browser cache</description>
    <inlineHelpText>Generated with below code in APEX
EncodingUtil.base64Encode(Crypto.generateAesKey(256));</inlineHelpText>
    <label>Encoded Crypto Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>