force-app/main/default/objects/Consumer_Help_and_Support__c/fields/End_Point_1Track_Service_URL_v2__c.field-meta.xml
<CustomField>
    <fullName>End_Point_1Track_Service_URL_v2__c</fullName>
    <description>End point url for 1 track service (updated version v2)</description>
    <label>End Point 1Track Service URL v2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>