force-app/main/default/objects/Consumer_Help_and_Support__c/fields/End_Point_Safedrop_Service_URL__c.field-meta.xml
<CustomField>
    <fullName>End_Point_Safedrop_Service_URL__c</fullName>
    <description>Endpoint for the safedrop service url</description>
    <label>End Point Safedrop Service URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>