force-app/main/default/objects/Consumer_Help_and_Support__c/fields/End_Point_URL_EDD_Service__c.field-meta.xml
<CustomField>
    <fullName>End_Point_URL_EDD_Service__c</fullName>
    <description>Endpoint url for EDD estimation</description>
    <label>End Point URL EDD Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>