force-app/main/default/objects/Consumer_Help_and_Support__c/fields/RecentScanDays__c.field-meta.xml
<CustomField>
    <fullName>RecentScanDays__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Recent scanned event logic for exception checker service</description>
    <label>Recent Scan Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>