force-app/main/default/objects/Consumer_Help_and_Support__c/fields/Safedrop_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Safedrop_API_Key__c</fullName>
    <label>Safedrop API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>