force-app/main/default/objects/Consumer_Help_and_Support__c/fields/Safedrop_Connection_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Safedrop_Connection_Time_Out__c</fullName>
    <description>Timeout settings for MRS safedrop service</description>
    <label>Safedrop Connection Time Out</label>
    <length>255</length>
    <type>Text</type>
</CustomField>